--- a/ImageViewer.dproj
+++ b/ImageViewer.dproj
@@ -69,6 +69,13 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <VerInfo_Locale>1049</VerInfo_Locale>
+        <Icon_MainIcon>ImageViewer_Icon.ico</Icon_MainIcon>
+        <VerInfo_Release>1</VerInfo_Release>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_PreRelease>true</VerInfo_PreRelease>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.1.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=ImageViewer;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -91,10 +98,11 @@
             <Form>MainForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Units\ImageViewer.ShlExt.pas"/>
+        <DCCReference Include="Units\ImageViewer.About.pas"/>
+        <DCCReference Include="Units\ImageViewer.ShellAdaptor.pas"/>
         <DCCReference Include="Units\ImageViewer.FolderTreeHelper.pas"/>
-        <DCCReference Include="Units\ImageViewer.ThumbnailListHelper.pas"/>
-        <DCCReference Include="Units\ImageViewer.ThumbExtractor.pas"/>
+        <DCCReference Include="Units\ImageViewer.ThumbnailCreator.pas"/>
+        <DCCReference Include="Units\ImageViewer.Thumbnail.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -115,6 +123,12 @@
                 <Source>
                     <Source Name="MainSource">ImageViewer.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcboffice2k230.bpl">Embarcadero C++Builder Office 2000 Servers Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcbofficexp230.bpl">Embarcadero C++Builder Office XP Servers Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k230.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp230.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="2">
                 <DeployFile LocalName="Win32\Debug\ImageViewer.exe" Configuration="Debug" Class="ProjectOutput">
