--- a/ImageViewer.dproj
+++ b/ImageViewer.dproj
@@ -103,6 +103,7 @@
         <DCCReference Include="Units\ImageViewer.FolderTreeHelper.pas"/>
         <DCCReference Include="Units\ImageViewer.ThumbnailCreator.pas"/>
         <DCCReference Include="Units\ImageViewer.Thumbnail.pas"/>
+        <DCCReference Include="Units\ImageViewer.ThumbnailViewHelper.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
